Fix blurriness and circles going outside boundaries

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
-* {
+html, * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.canvas {
+    background-color: lightcyan;
     box-sizing: border-box;
 }
